--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: 'pure_isolate'
+name: 'using_isolate'
 version: 0.0.1
 description: A web app built using polymer.dart.
 #author: Your Name <email@example.com>
